--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,23 @@
+@font-face {
+    font-family: oldsans;
+    src: url('OldSansBlack.ttf');
+}
+@font-face {
+    font-family: mentone;
+    src: url('mentone.otf');
+}
 .naslov {
-    font-weight:bold;
+    font-family:oldsans;
     margin-left:25%;
     float:left;
-    margin-bottom:-25px;
-    font-size:18px;
+    margin-bottom:-15px;
+    font-size:20px;
 }
 .naslov-login {
-    font-weight:bold;
+    font-family:oldsans;
     margin-left:25%;
     float:left;
-    font-size:18px;
+    font-size:20px;
 }
 .welcome {
     float:right;
@@ -19,19 +27,36 @@
 .glava {
     background-size:cover;
     background-color:#CCCCCC;
-    margin-bottom:-21px;
+    margin-bottom:-15px;
 }
 .glava-login {
     background-size:cover;
     background-color:#CCCCCC;
 }
 #menu {
-    font-size:20;
+    font-family: mentone;
+    font-size:17;
     word-spacing:50px;
 }
 body {
     font-family: Tahoma, Geneva, sans-serif;   
     margin:0;
+}
+#administration {
+    margin-left:10%;
+}
+#administration p{
+    font-weight:bold;
+}
+#adduser {
+    margin-right:60%;
+    text-align:right;
+}
+#adduser p {
+    text-align:left;
+    margin-left:60%;
+    font-weight:bold;
+    margin-top:5%;
 }
 #container {
     font-family: Tahoma, Geneva, sans-serif;
@@ -42,7 +67,7 @@ a:link {
     text-decoration:none;
 }
 a:visited {
-    color:#7d537d;
+    color:#996699;
     text-decoration:none;
 }
 a:hover {
@@ -53,11 +78,11 @@ a:active {
     color:black;
 }
 
-ul {
+ul.menu {
     margin-left:25%;
     margin-right:25%;   
 }
-li {
+li.menu {
     display:inline;
 }
 #footer {
