--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
     margin:0;
 }
 #administration {
-    margin-left:10%;
+    margin-left:15%;
 }
 #administration p{
     font-weight:bold;
@@ -57,6 +57,10 @@ body {
     margin-left:60%;
     font-weight:bold;
     margin-top:5%;
+}
+#uservalidation {
+    margin-left:25%;
+    color:red;
 }
 #container {
     font-family: Tahoma, Geneva, sans-serif;
@@ -86,6 +90,9 @@ li.menu {
     display:inline;
 }
 #footer {
+    margin-right:15%;
+    margin-left:15%;
     text-align:center;
     background-color:#006699;
+    color:white;
 }
