--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 }
 .glava {
     background-size:cover;
-    background-color:#CCCCCC;
+    background-color:#DADADA;
     margin-bottom:-17px;
 }
 hr {
@@ -37,7 +37,7 @@ hr {
 }
 .glava-login {
     background-size:cover;
-    background-color:#CCCCCC;
+    background-color:#DADADA;
     margin-bottom:-9px;
 }
 #menu {
