--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,22 @@ body {
     font-family: Tahoma, Geneva, sans-serif;   
     margin:0;
 }
-#administration {
-    margin-left:15%;
-}
-#administration p{
+#title{
     font-weight:bold;
+}
+#content {
+    margin-left:15%;
+    width:65%;
+    display:inline-block;
+}
+#left {
+    float:left;
+}
+#projects {
+    float:right;
+    background:lightgrey;
+    position:absolute;
+    right:15%;
 }
 #add {
     margin-right:60%;
@@ -76,11 +87,7 @@ textarea.addstory {
     resize:none;
 }
 #tasks {
-    margin-right:60%;
-    text-align:right;
-}
-#tasks li {
-    margin-left:65%;
+    
 }
 #container {
     font-family: Tahoma, Geneva, sans-serif;
