--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*avtor:darko*/
+/* /*avtor:darko*/ */
 @font-face {
     font-family: oldsans;
     src: url('OldSansBlack.ttf');
@@ -13,12 +13,14 @@
     float:left;
     margin-bottom:-15px;
     font-size:20px;
+    font-weight:bold;
 }
 .naslov-login {
     font-family:oldsans;
     margin-left:25%;
     float:left;
     font-size:20px;
+    font-weight:bold;
 }
 .welcome {
     float:right;
@@ -28,7 +30,7 @@
 .glava {
     background-size:cover;
     background-color:#CCCCCC;
-    margin-bottom:-17px;
+    margin-bottom:-9px;
 }
 hr {
     border:0;
@@ -43,6 +45,7 @@ hr {
 #menu {
     font-family: mentone;
     font-size:17;
+    padding-bottom:2px;
 }
 
 body {
@@ -65,19 +68,28 @@ body {
     background:lightgrey;
     position:absolute;
     right:15%;
+    padding-left:15px;
+    padding-right:15px;
 }
 #add {
-    margin-right:60%;
     text-align:right;
 }
 #add p {
     text-align:left;
-    margin-left:60%;
+    margin-left:40%;
     font-weight:bold;
     margin-top:5%;
 }
 #add label {
     font-style:italic;
+    vertical-align:top;
+}
+#add div.error {
+    font-weight:normal;
+    font-size:10px;
+    color:red;
+    text-align:left;
+    margin-left:-80%;
 }
 #validation {
     margin-left:25%;
@@ -85,9 +97,6 @@ body {
 }
 textarea.addstory {
     resize:none;
-}
-#tasks {
-    
 }
 #container {
     font-family: Tahoma, Geneva, sans-serif;
@@ -125,6 +134,7 @@ li.active {
     margin-right: 3em;
 }
 #footer {
+    margin-top:5%;
     margin-right:15%;
     margin-left:15%;
     text-align:center;
