--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,15 @@
     font-family: mentone;
     src: url('mentone.otf');
 }
+.container {
+	border:1px solid #ccc; 
+	width:200px;
+	margin:auto;
+	margin-right:0%;
+	height: auto;
+	overflow-y: 
+	scroll;
+}
 .naslov {
     font-family:oldsans;
     margin-left:25%;
