--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* /*avtor:darko*/ */
+/*avtor:darko*/
 @font-face {
     font-family: oldsans;
     src: url('OldSansBlack.ttf');
@@ -7,20 +7,29 @@
     font-family: mentone;
     src: url('mentone.otf');
 }
+.container {
+	border:1px solid #ccc; 
+	width:200px;
+	margin:auto;
+	margin-right:0%;
+	height: auto;
+	overflow-y: 
+	scroll;
+}
 .naslov {
     font-family:oldsans;
     margin-left:25%;
     float:left;
     margin-bottom:-15px;
     font-size:20px;
-    font-weight:bold;
+	font-weight:bold;
 }
 .naslov-login {
     font-family:oldsans;
     margin-left:25%;
     float:left;
     font-size:20px;
-    font-weight:bold;
+	font-weight:bold;
 }
 .welcome {
     float:right;
@@ -45,7 +54,7 @@ hr {
 #menu {
     font-family: mentone;
     font-size:17;
-    padding-bottom:2px;
+	padding-bottom:2px;
 }
 
 body {
@@ -68,7 +77,7 @@ body {
     background:lightgrey;
     position:absolute;
     right:15%;
-    padding-left:15px;
+	padding-left:15px;
     padding-right:15px;
 }
 #add {
@@ -82,7 +91,7 @@ body {
 }
 #add label {
     font-style:italic;
-    vertical-align:top;
+	vertical-align:top;
 }
 #add div.error {
     font-weight:normal;
