Spreminjanje lastnih uporabniških podatkov.

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ BODY
 #add P
 {
 	text-align: left;
-	margin-left: 40%;
+/*	margin-left: 40%;*/
 	font-weight: bold;
 	margin-top: 5%;
 }
@@ -149,8 +149,10 @@ BODY
 }
 #validation
 {
-	margin-left: 25%;
+	/*margin-left: 25%;*/
 	color: #FF0000;
+	font-weight:normal;
+	font-size:small;
 }
 BUTTON.task
 {
@@ -203,8 +205,7 @@ LI.active
 	display: inline;
 	margin-right: 3em;
 }
-#footer
-{
+#footer {
 	margin-top: 10%;
 	margin-right: 15%;
 	margin-left: 15%;
