--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,9 @@ h5
 	margin-left: 464px;
 	margin-right: -150px;
 }
+.editUsers {
+    display:inline;
+}
 .deletebutton{
 	margin-top: -42px;
 	margin-bottom: -20px;
@@ -188,8 +191,7 @@ body
 	font-weight:normal;
 	font-size:small;
 }
-button.task
-{
+button.task {
 	float: right;
 }
 textarea.addstory
@@ -226,7 +228,7 @@ a:active
 }
 ul.menu
 {
-	margin-left: 25%;
+	margin-left: 15%;
 	margin-right: 25%;
 }
 li.menu
