Popravljeno dodajanje zgodb zaradi sprememb v bazi, v seznamu projektov pod imenom zdaj piše vloga uporabnika.

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,10 @@ body{
 	padding-left: 15px;
 	padding-right: 15px;
 }
+.selectProject {
+    text-align:left;
+    font-size:small;
+}
 #add{
 	text-align: right;
 }
