--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ h5{
 }
 .difficulty{
 	margin-top: -6px;
-	margin-bottom: -36px;
+	margin-bottom: -30px;
 }
 .taski{
 	border: 1px solid #808080;
@@ -77,16 +77,22 @@ h5{
 	margin-left: 450px;
 	margin-right: -150px;
 }
+.workingLabel{
+	margin-top: -20px;
+	margin-bottom: 0px;
+	margin-left: 500px;
+	margin-right: 0px;
+}
 .editTaskButton{
 	margin-top: -26px;
 	margin-bottom: 0px;
 	margin-left: 715px;
 	margin-right: 0px;
 }
-.workingLabel{
+.takeTaskButton{
 	margin-top: -20px;
 	margin-bottom: 0px;
-	margin-left: 500px;
+	margin-left: 638px;
 	margin-right: 0px;
 }
 .assignTaskUser{
@@ -162,6 +168,10 @@ body{
 	right: 15%;
 	padding-left: 15px;
 	padding-right: 15px;
+}
+.selectProject {
+    text-align:left;
+    font-size:small;
 }
 #add{
 	text-align: right;
