--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ h5{
 .glava{
 	background-size: cover;
 	background-color: #CCCCCC;
+	background-color: #CCCCCC;
 	margin-bottom: -9px;
 }
 hr{
@@ -162,7 +163,7 @@ hr{
 }
 #menu{
 	font-family: mentone;
-	font-size: 17;
+	font-size: 15;
 	padding-bottom: 2px;
 }
 body{
@@ -236,7 +237,7 @@ a:link, a:visited{
 	color: #996699;
 	text-decoration: none;
 	padding:4px;
-	width:120px;
+/* 	width:120px; */
 	text-align:center;
 }
 a:hover, a:active{
@@ -247,11 +248,11 @@ ul.menu{
 }
 li.menu{
 	display: inline-block;
-	margin-right: 3em;
+	margin-right: 2em;
 }
 li.active{
 	display: inline;
-	margin-right: 3em;
+	margin-right: 2em;
 }
 #footer {
 	margin-top: 10%;
@@ -260,4 +261,44 @@ li.active{
 	text-align: center;
 	background-color: #006699;
 	color: #FFFFFF;
+}
+
+/*  */
+
+/*Initialize*/
+ul#menu, ul#menu  {
+    padding:0;
+    margin-left: 20%;
+}
+ul.sub-menu {
+    padding:0;
+    margin: 0;
+}
+ul#menu li, ul#menu ul.sub-menu li {
+    list-style-type: none;
+    display: inline-block;
+}
+/*Link Appearance*/
+ul#menu li a, ul#menu li ul.sub-menu li a {
+    text-decoration: none;
+    color: #fff;
+    background: #666;
+    padding: 5px;
+    display:inline-block;
+}
+/*Make the parent of sub-menu relative*/
+ul#menu li {
+    position: relative;
+}
+/*sub menu*/
+ul#menu li ul.sub-menu {
+    display:none;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100px;
+    margin-top: -5px;
+}
+ul#menu li:hover ul.sub-menu {
+    display:block;
 }
