--- a/css/styles.css
+++ b/css/styles.css
@@ -182,10 +182,11 @@ body{
 	float: left;
 }
 #projects{
+	border: 1px solid #999;
 	float: right;
 	background: #D3D3D3;
-	position: absolute;
-	right: 15%;
+	position: fixed;
+	right: 2%;
 	padding-left: 15px;
 	padding-right: 15px;
 }
