--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,10 @@ body{
 }
 button.task{
 	float: right;
+	display:inline-block;
+}
+button.left{
+    float: left;
 }
 textarea.addstory{
 	resize: none;
@@ -263,7 +267,6 @@ li.active{
 	background-color: #006699;
 	color: #FFFFFF;
 }
-
 /*  */
 /* http://code-tricks.com/simple-css-drop-down-menu/ */
 /*Initialize*/
